--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "zod": "^4.0.13"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.1.0",
