--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@prisma/client": "^6.13.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "prisma": "^6.13.0",
     "zod": "^4.0.13"
